fixed popup z-index

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  z-index: 1000;
+  z-index: 100;
   top: 0;
   width: 100%;
   background-color: $dark-charcoal;
@@ -36,6 +36,7 @@
     gap: 30px;
 
     @media (max-width: 1400px) {
+      display: none;
       flex-direction: column;
       padding-top: 50px;
       max-width: 250px;
