--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -5,7 +5,7 @@
   max-height: 100vh;
   width: 100%;
   height: 100%;
-  z-index: 30;
+  z-index: 200;
   top: 0;
   left: 0;
   padding-top: 50px;
